--- a/osa website/style.css
+++ b/osa website/style.css
@@ -34,5 +34,88 @@ img.foot-pic {
   right: -40px;
 }
 
+/* body {
+  // Full screen width and height
+  width: 100%;
+  min-height: 100vh;
+
+  // Centers the container in the middle of the screen
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0;
+  background-color: rgb(220, 220, 220);
+} */
+
+.container-wiggle {
+  perspective: 25px;
+}
+
+.inner-wiggle {
+  background-color: white;
+  box-shadow: 2px 2px 50px rgba(0, 0, 0, 0.2);
+  transition: transform 0.5s;
+  -webkit-transition: transform 0.5s;
+  -moz-transition: transform 0.5s;
+  -o-transition: transform 0.5s;
+}
+
+.flower-container{
+  position: relative;
+}
+
+.flower-transition{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  background-repeat: repeat;
+  background-size: 30%;
+  transition-property: transform;
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.5s;
+  z-index: -1;
+}
+
+#flower0{
+  background-image: url("./static/Connection.png");
+}
+
+#flower1{
+  background-image: url("./static/Companion.png");
+}
+
+#flower2{
+  background-image: url("./static/Friendship.png");
+}
+
+#flower3{
+  background-image: url("./static/Reinvention.png");
+}
+
+#flower4{
+  background-image: url("./static/Staying\ True.png");
+}
+
+
+#text{
+  background-color: #ffffff;
+}
+
+/* debug */
+/* #helper {
+  color: white;
+  padding: 0.2em;
+  border-radius: 5%;
+  background-color: grey;
+  
+  position: absolute;
+  z-index: 0;
+}
+
+.hidden {
+  display: none;
+} */
 
 /*# sourceMappingURL=style.css.map */
