--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+a{
+  margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover{
+  color: inherit;
+}
+
 .bg {
   background-color: #f2e0c3;
 }
@@ -7,7 +21,7 @@
 }
 
 .intro {
-  color: #FFF;
+  color: rgb(51, 51, 51);
   height: 100%;
   display: flex;
   align-items: center;
