--- a/style.css
+++ b/style.css
@@ -12,6 +12,41 @@ a:hover{
   color: inherit;
 }
 
+.zoom {
+  transition: transform .2s; /* Animation */
+}
+
+.zoom:hover{
+  transform: scale(1.05) 
+}
+
+.gg-play-button-o {
+  box-sizing: border-box;
+  position: relative;
+  display: inline-block;
+  transform: scale(var(--ggs,1));
+  color: #f2e0c3;
+  width: 22px;
+  height: 22px;
+  border: 2px solid;
+  border-radius: 20px;
+  top: 5px;
+}
+
+.gg-play-button-o::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  width: 0;
+  height: 10px;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 6px solid;
+  top: 4px;
+  left: 7px
+}
+
 .bg {
   background-color: #f2e0c3;
 }
@@ -238,6 +273,7 @@ img.foot-pic {
   position: absolute;
   bottom: -70%;
   left: 0;
+  top: 50px;
   width: 100%;
   height: 100%;
   background-color: #c66840;
